[package]
name = "signal-handler"
version = "0.0.0"
edition = "2021"

[package.metadata.docs.rs]
all-features = true

[features]
default = ["tokio"]

[dependencies]
signal-hook = { version = "0.3", default-features = false }

tokio = { version = "1.18", default-features = false, features = ["rt", "sync"], optional = true }

[dev-dependencies]
tokio = { version = "1.18", features = ["macros", "rt-multi-thread", "net", "io-util"] }

portpicker = { version = "0.1" }
