[package]
name = "signal-handler"
version = "0.0.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2021"
description = "Signal Handler"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/signal-utils"
homepage = "https://github.com/bk-rs/signal-utils"
documentation = "https://docs.rs/signal-handler"
keywords = []
categories = []
readme = "README.md"

[package.metadata.docs.rs]
all-features = true

[features]
default = ["tokio"]

[dependencies]
signal-hook = { version = "0.3", default-features = false }

tokio = { version = "1.18", default-features = false, features = ["rt", "sync"], optional = true }

[dev-dependencies]
tokio = { version = "1.18", features = ["macros", "rt-multi-thread", "sync", "time", "net", "io-util"] }

portpicker = { version = "0.1" }
