[package]
name = "signal-handler"
version = "0.2.1"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2021"
description = "Signal Handler"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/signal-utils"
homepage = "https://github.com/bk-rs/signal-utils"
documentation = "https://docs.rs/signal-handler"
keywords = []
categories = []
readme = "README.md"

[package.metadata.docs.rs]
all-features = true

[features]
default = ["impl_tokio"]

impl_tokio = ["tokio", "channel-sender/impl_tokio"]

[dependencies]
signal-hook = { version = "0.3", default-features = false }
channel-sender = { version = "0.4", default-features = false }

tokio = { version = "1", default-features = false, features = ["rt", "sync"], optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "net", "io-util"] }

portpicker = { version = "0.1" }
